# awesome-pypi-example

./: .buildinfo  .pre-commit-config.yaml  .pylintrc  CHANGELOG.rst  README.md  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  searchindex.js  setup.cfg
.github/workflows/: gh-pages.yml  python-package.yml  python-publish.yml
_sources/: index.rst.txt
docs/: conf.py
doctrees/: environment.pickle  index.doctree
html/: index.html  py-modindex.html  search.html  searchindex.js
src/awesome_pypi_example/: __init__.py  fibonacci.py
tests/: test_fibonacci.py
