[tool.poetry]
name = "awesome-pypi-example"
version = "0.1.0"
description = "A complete example of a Pypi package using Poetry"
authors = ["Arnaud Blois <a.blois@ucl.ac.uk>"]
license = "MIT"
include = ["README.rst", "CHANGELOG.rst", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pytest = "^6.2.5"
pylint-runner = "^0.6.0"
pre-commit = "^2.15.0"
isort = "^5.9.3"
gitlint = "^0.15.1"
gitchangelog = "^3.0.4"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
python-lsp-server = {extras = ["all"], version = "^1.2.4"}
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
run-ignite = "ignite.ignite:run_ignite"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.ini_options]
disable = ["C0330", "C0326", "R0801"]
max-line-length = 88
ignore = "docs"

[tool.pylint.master]
ignore = "docs"

[tool.isort]
profile = "black"
multi_line_output = 3
